<!--
  ~ /**
  ~  * Created by Wellsen on 7/20/19 5:57 PM
  ~  * for Mandiri What The Hack Hackathon
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 7/20/19 4:24 PM
  ~  */
  -->

<resources>
  <string name="app_name">WTH</string>

  <string name="no_connection">No Internet Connection</string>
  <string name="prompt_username">Username</string>
  <string name="prompt_name">Name</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_nik">NIK</string>
  <string name="prompt_phone">Phone</string>
  <string name="prompt_dob">Date of Birth</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_otp">Please type the OTP code sent to $email</string>
  <string name="prompt_signature">Please sign to proceed</string>
  <string name="prompt_mother_name">Mother\'s maiden name</string>
  <string name="message_otp_resend">Please check your inbox for OTP</string>
  <string name="title_text_product_type">Product type</string>
  <string name="title_text_card_type">Card type</string>
  <string name="title_text_branch_code">Branch code</string>
  <string name="title_text_selfie">Tap camera to take Selfie Photo</string>
  <string name="title_text_ktp">Tap camera to take KTP Photo</string>
  <string name="title_text_permission_needed">This app needs permission to use this feature. You can grant them in app settings.</string>
  <string name="title_text_agree">I agree to terms and conditions</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="action_reset_pass">Reset Password</string>
  <string name="action_reset_pass_short">Reset</string>
  <string name="action_register"><u>Registrasi rekening baru</u></string>
  <string name="action_resend">Resend OTP</string>
  <string name="action_submit_data">Submit Data</string>
  <string name="action_take_photo">Take Photo</string>
  <string name="action_open_gallery">Open Gallery</string>
  <string name="action_submit">Submit</string>
  <string name="action_settings">Settings</string>
  <string name="action_agree">Agree</string>
  <string name="action_cancel">Cancel</string>
  <string name="invalid_email">Invalid email</string>
  <string name="invalid_nik">NIK must be 16 characters</string>
  <string name="invalid_phone">Phone must be 10 to 13 characters</string>
  <string name="invalid_dob">Invalid date of birth</string>
  <string name="invalid_name">Name must be 4 to 255 characters</string>
  <string name="invalid_username">Username must be 4 to 255 characters</string>
  <string name="invalid_mothers_name">Mother\'s maiden name must be 4 to 255 characters</string>
  <string name="invalid_password">Password must be 6 to 15 characters</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="agora_app_id">4c2f75bf69e6406990be43663cd0e4e4</string>
</resources>
