<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Wellsen on 7/20/19 1:35 AM
  ~  * for Mandiri What The Hack Hackathon
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 7/20/19 1:35 AM
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="vm"
        type="com.wellsen.mandiri.whatthehack.android.ui.login.LoginViewModel"
        />
  </data>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".ui.login.LoginActivity"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/iv_logo"
          android:layout_width="200dp"
          android:layout_height="158dp"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/ic_mandiri_blue"
          android:transitionName="logo"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="24dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="?attr/actionBarSize"
          android:transitionName="username"
          android:hint="@string/prompt_username"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/iv_logo"
          app:errorEnabled="true"
          style="@style/TextInputLayout"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
            android:maxLength="255"
            android:text="@={vm.username}"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_password"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="24dp"
          android:layout_marginStart="24dp"
          android:hint="@string/prompt_password"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_username"
          app:errorEnabled="true"
          style="@style/TextInputLayout"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="15"
            android:text="@={vm.password}"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:id="@+id/btn_login"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:transitionName="button"
          android:onClick="@{vm::onClick}"
          android:enabled="false"
          android:background="@color/colorPrimary"
          android:gravity="center"
          android:text="Masuk"
          android:textAllCaps="true"
          android:textColor="@android:color/white"
          android:textSize="19sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          />

      <TextView
          android:id="@+id/btn_register"
          android:layout_width="wrap_content"
          android:layout_height="?attr/actionBarSize"
          android:layout_marginBottom="16dp"
          android:gravity="center"
          android:text="@string/action_register"
          android:textColor="@color/colorPrimary"
          android:textSize="17sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@+id/btn_login"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          />

      <!--<com.google.android.material.button.MaterialButton
          android:id="@+id/btn_forgot_pass"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:gravity="center"
          android:text="@string/action_reset_pass"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btn_register"
          style="@style/Button.TextButton"
          />-->

      <ProgressBar
          android:id="@+id/pb"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="64dp"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="64dp"
          android:visibility="@{safeUnbox(vm.pbVisibility)}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:visibility="visible"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </RelativeLayout>

</layout>