<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Wellsen on 7/12/19 3:54 PM
  ~  * for Mandiri What The Hack Hackathon
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 7/12/19 3:54 PM
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="vm"
        type="com.wellsen.mandiri.whatthehack.android.ui.resetpass.ResetPassViewModel"
        />
  </data>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context=".ui.login.LoginActivity"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        >

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/iv_logo"
          android:layout_width="200dp"
          android:layout_height="58dp"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/ic_mandiri_blue"
          android:transitionName="logo"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="24dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="?attr/actionBarSize"
          android:transitionName="username"
          android:hint="@string/prompt_username"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/iv_logo"
          app:errorEnabled="true"
          style="@style/TextInputLayout"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeActionLabel="@string/action_reset_pass_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
            android:maxLength="255"
            android:text="@={vm.username}"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btn_reset_pass"
          android:layout_width="0dp"
          android:layout_height="?attr/actionBarSize"
          android:layout_marginEnd="48dp"
          android:layout_marginStart="48dp"
          android:layout_marginTop="24dp"
          android:transitionName="button"
          android:enabled="false"
          android:onClick="@{vm::onClick}"
          android:text="@string/action_reset_pass"
          android:textColor="@android:color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_username"
          app:cornerRadius="8dp"
          style="@style/Button"
          />

      <ProgressBar
          android:id="@+id/pb"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="64dp"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="64dp"
          android:visibility="@{safeUnbox(vm.pbVisibility)}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:visibility="visible"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </FrameLayout>

</layout>